fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -169,7 +169,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 16em;
+	margin-top: 12em;
 	width: 100%;
 	height: 100%;
 }
@@ -189,7 +189,6 @@ body {
 	margin: auto;
 }
 
-
 .console-underscore {
 	display: inline-block;
 	position: relative;
@@ -200,13 +199,17 @@ body {
 .homepage-description {
 	text-align: center;
 	width: 325px;
-	margin-top: 8em;
-	margin-bottom: 8em;
+	margin-top: 5em;
+	margin-bottom: 5em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
 
 @media (min-width: 400px) {
+	.homepage {
+		margin-top: 16em;
+	}
+	
 	.homepage-title {
 		width: 550px;
 	}
@@ -223,6 +226,8 @@ body {
 	
 	.homepage-description{
 		width: 900px;
+		margin-top: 8em;
+		margin-bottom: 8em;
 	}
 } 
 
